--- a/src/sass/layout/components/card.scss
+++ b/src/sass/layout/components/card.scss
@@ -1,5 +1,13 @@
+@import '../../variables';
+
 .mat-card {
-  background: #132430;
+  background: $header-nav-background;
+}
+
+.mat-card.page-container-shadow {
+  -webkit-box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.7);
 }
 
 .mat-card-title {
