--- a/src/sass/layout/splash-screen.scss
+++ b/src/sass/layout/splash-screen.scss
@@ -1,7 +1,20 @@
+@import "../helpers";
+@import "../variables";
+
 #fullscreen-splash {
   height: 100vh;
   width: 100vw;
-  background: #1f3240;
+  background: $body-background-color;
+  background: -moz-linear-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* ff3.6+ */
+  background: -webkit-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* safari4+,chrome */
+  background: -webkit-linear-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* safari5.1+,chrome10+ */
+  background: -ms-linear-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* ie10+ */
+  background: -o-linear-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* opera 11.10+ */
+  background: linear-gradient($body-gradient-degrees, $body-gradient-0 0%, $body-gradient-1 100%); /* common. */
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   position: fixed;
   display: flex;
   flex-wrap: wrap;
@@ -26,7 +39,7 @@
     transition: visibility 0s 0.18s, opacity 0.18s linear;
   }
 
-  @include logo-text(3.1rem, 0.65rem 1rem 0px 1rem);
+  @include logo-text(2.8rem, 0.65rem 1rem 0px 1rem);
 
   .spinner-container {
     position: relative;
