--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 @import "sass/material";
 
-@import "sass/layout/helpers";
 @import "sass/layout/global";
 @import "sass/layout/splash-screen";
 @import "sass/layout/navigation";
 @import "sass/layout/breadcrumbs";
 @import "sass/layout/components/autocomplete";
+@import "sass/layout/components/buttons";
 @import "sass/layout/components/card";
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
