SB-1313 Use app-page-container to unify the page view (search results).

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,6 +109,12 @@
                 </a>
             </li>
 
+            <li>
+                <a title="Browse" routerLink="/browse" routerLinkActive="active">
+                    <i class="icon ion-md-filing"></i>
+                </a>
+            </li>
+
             <li *ngFor="let item of navigation">
                 <a [title]="item.title" [routerLink]="item.url" routerLinkActive="active"
                    [style.margin-left]="item.marginLeft">
