SB-1319 Create a page for managing storages and repositories
Add a visual splitter to the add repository button.

--- a/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
+++ b/src/app/modules/storage-management/pages/browse-storages/components/list-repositories/list-repositories.component.html
@@ -38,8 +38,8 @@
                     </mat-menu>
                     <!--  -->
                     <button mat-raised-button color="primary" [matMenuTriggerFor]="repositoryTypes" #menuTrigger="matMenuTrigger">
-                        Add a repository &nbsp;&nbsp;
-                        <i class="ion"
+                        Add a repository
+                        <i class="ion splitter"
                            [class.ion-md-arrow-dropdown]="!menuTrigger.menuOpen"
                            [class.ion-md-arrow-dropup]="menuTrigger.menuOpen"
                         ></i>
