--- a/src/sass/layout/components/buttons.scss
+++ b/src/sass/layout/components/buttons.scss
@@ -27,6 +27,15 @@
   background: linear-gradient(to bottom, lighten($btn-warn-gradient-0, 2%) 0%, lighten($btn-warn-gradient-1, 5%) 100%);
 }
 
+i.splitter {
+  margin-left: 5px;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  margin-right: -8px;
+  line-height: 30px;
+  padding: 3px 0px 2px 7px;
+  margin-top: -3px;
+}
+
 
 
 /*
