--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -38,3 +38,6 @@ $btn-warn-gradient-1: darken(desaturate($btn-warn-gradient-0, 7%), 20%);
 
 // Tables
 $table-row-color: rgba(0, 0, 0, 0.1);
+
+// Panels (i.e. menu, autocomplete, select, etc)
+$panel-background: #334554;
