--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 @import "sass/layout/components/dialog";
 @import "sass/layout/components/form";
 @import "sass/layout/components/form-errors";
+@import "sass/layout/components/menu";
 @import "sass/layout/components/select";
 @import "sass/layout/components/tab";
 @import "sass/layout/components/table";
