SB-1319 Create a page for managing storages and repositories
- Make form field errors null-proofed.

--- a/src/app/shared/form/form-field-errors/form-field-errors.component.html
+++ b/src/app/shared/form/form-field-errors/form-field-errors.component.html
@@ -1,6 +1,8 @@
-<ng-container *ngFor="let message of getApiErrors()">
-    {{ message }}
-</ng-container>
-<ng-container *ngFor="let message of getFormErrors()">
-    {{ message }}
+<ng-container *ngIf="field !== null">
+    <ng-container *ngFor="let message of getApiErrors()">
+        {{ message }}
+    </ng-container>
+    <ng-container *ngFor="let message of getFormErrors()">
+        {{ message }}
+    </ng-container>
 </ng-container>
